// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders ./src/modal/demo/async.vue correctly 1`] = `
"<div><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Open Modal with async logic</span></button>
  <!---->
</div>"
`;

exports[`renders ./src/modal/demo/basic.vue correctly 1`] = `
"<div><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Open Modal</span></button>
  <!---->
</div>"
`;

exports[`renders ./src/modal/demo/button-props.vue correctly 1`] = `
"<div><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Open Modal with customized button props</span></button>
  <!---->
</div>"
`;

exports[`renders ./src/modal/demo/confirm.vue correctly 1`] = `
"<div class="xy-space css-dev-only-do-not-override-1p3hq3p xy-space-horizontal xy-space-align-center" style="flex-wrap: wrap; margin-bottom: -8px;">
  <div class="xy-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-default" type="button"><span style="display: contents;"><!----></span><span>Confirm</span></button></div>
  <!---->
  <div class="xy-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-default" type="button"><span style="display: contents;"><!----></span><span>With promise</span></button></div>
  <!---->
  <div class="xy-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-dashed" type="button"><span style="display: contents;"><!----></span><span>Delete</span></button></div>
  <!---->
  <div class="xy-space-item" style="padding-bottom: 8px;"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-dashed" type="button"><span style="display: contents;"><!----></span><span>With extra props</span></button></div>
  <!---->
</div>"
`;

exports[`renders ./src/modal/demo/confirm-promise.vue correctly 1`] = `"<button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-default" type="button"><span style="display: contents;"><!----></span><span>Confirm</span></button>"`;

exports[`renders ./src/modal/demo/confirm-router.vue correctly 1`] = `"<button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-default" type="button"><span style="display: contents;"><!----></span><span>Confirm</span></button>"`;

exports[`renders ./src/modal/demo/footer.vue correctly 1`] = `
"<div><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Open Modal with customized footer</span></button>
  <!---->
</div>"
`;

exports[`renders ./src/modal/demo/fullscreen.vue correctly 1`] = `
"<div><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Open Modal</span></button>
  <!---->
</div>"
`;

exports[`renders ./src/modal/demo/hook-modal.vue correctly 1`] = `
"<div class="xy-space css-dev-only-do-not-override-1p3hq3p xy-space-horizontal xy-space-align-center" style="flex-wrap: wrap; margin-bottom: -8px;">
  <div class="xy-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-default" type="button"><span style="display: contents;"><!----></span><span>Confirm</span></button></div>
  <!---->
  <div class="xy-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-default" type="button"><span style="display: contents;"><!----></span><span>With promise</span></button></div>
  <!---->
  <div class="xy-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-dashed" type="button"><span style="display: contents;"><!----></span><span>Delete</span></button></div>
  <!---->
  <div class="xy-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-dashed" type="button"><span style="display: contents;"><!----></span><span>With extra props</span></button></div>
  <!---->
  <div class="xy-space-item" style="padding-bottom: 8px;"></div>
  <!---->
</div>"
`;

exports[`renders ./src/modal/demo/info.vue correctly 1`] = `
"<div class="xy-space css-dev-only-do-not-override-1p3hq3p xy-space-horizontal xy-space-align-center" style="flex-wrap: wrap; margin-bottom: -8px;">
  <div class="xy-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-default" type="button"><span style="display: contents;"><!----></span><span>Info</span></button></div>
  <!---->
  <div class="xy-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-default" type="button"><span style="display: contents;"><!----></span><span>Success</span></button></div>
  <!---->
  <div class="xy-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-default" type="button"><span style="display: contents;"><!----></span><span>Error</span></button></div>
  <!---->
  <div class="xy-space-item" style="padding-bottom: 8px;"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-default" type="button"><span style="display: contents;"><!----></span><span>Warning</span></button></div>
  <!---->
</div>"
`;

exports[`renders ./src/modal/demo/locale.vue correctly 1`] = `
"<div><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Modal</span></button><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-default" type="button"><span style="display: contents;"><!----></span><span>Confirm</span></button>
  <!---->
</div>"
`;

exports[`renders ./src/modal/demo/manual.vue correctly 1`] = `"<button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-default" type="button"><span style="display: contents;"><!----></span><span>Open modal to close in 5s</span></button>"`;

exports[`renders ./src/modal/demo/modal-render.vue correctly 1`] = `
"<div><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Open Modal</span></button>
  <!---->
</div>"
`;

exports[`renders ./src/modal/demo/position.vue correctly 1`] = `
"<div id="components-modal-demo-position"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Display a modal dialog at 20px to Top</span></button>
  <!----><br><br><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Vertically centered modal dialog</span></button>
  <!---->
</div>"
`;

exports[`renders ./src/modal/demo/width.vue correctly 1`] = `
"<div><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Open Modal of 1000px width</span></button>
  <!---->
</div>"
`;
